# onyx-foss

./: .git-blame-ignore-revs  .gitignore  .mcp.json  .pre-commit-config.yaml  .secretsignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  PROCEDURES.md  README.md  docker-bake.hcl  greptile.json  package.json  pyproject.toml  start.sh
.claude/: claude-security-guidance.md  next-session-prompt.md
.claude/hooks/: protect-onyx-files.sh
.claude/rules/: codebase-orientierung.md  commit-workflow.md  core-dateien.md  datenbank.md  ee-foss-lizenz.md  enterprise-grundsaetze.md  extension-regeln.md  fork-management.md  sicherheit.md  testing.md  voeb-projekt-status.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  init-dev-user.sh  init-firewall.sh
.devcontainer/claude-code/: CLAUDE.md
.githooks/: pre-commit
.github/: CODEOWNERS  actionlint.yml  dependabot.yml
.github/workflows/: audit.yml  build-deploy.yml  check-lazy-imports.yml  ci.yml  deployment.yml  docker-tag-beta.yml  docker-tag-latest.yml  helm-chart-releases.yml  nightly-close-stale-issues.yml  nightly-external-dependency-unit-tests.yml  nightly-llm-provider-chat-openai.yml  nightly-llm-provider-chat.yml  nightly-scan-licenses.yml  post-merge-beta-cherry-pick.yml  pr-checks.yml  pr-connector-filter-eval.yml  pr-craft-compose-integration.yml  pr-craft-compose-tests.yml  pr-craft-k8s-tests.yml  pr-database-tests.yml  pr-desktop-build.yml  pr-external-dependency-unit-tests.yml  pr-golang-tests.yml  pr-helm-chart-testing.yml  pr-helm-chart-version.yml  pr-integration-tests-skip.yml  pr-integration-tests.yml  pr-jest-tests.yml  pr-linear-check.yml  pr-mit-integration-tests.yml  pr-playwright-tests-skip.yml  pr-playwright-tests.yml  pr-python-checks.yml  pr-python-connector-tests.yml  pr-python-model-tests.yml  pr-python-tests.yml  pr-quality-checks.yml  pr-recommended-models-chat-test.yml  preview.yml  release-cli.yml  (+12 more)
.greptile/: config.json  rules.md
backend/: .dockerignore  AGENTS.md  Dockerfile  Dockerfile.model_server  pyproject.toml  supervisord.conf
backend/alembic/: env.py  run_multitenant_migrations.py
backend/alembic_tenants/: env.py
backend/ext/: __init__.py  config.py
backend/model_server/: __main__.py  ca_certs.py  encoders.py  main.py  management_endpoints.py  utils.py
backend/onyx/: main.py  mcp_server_main.py  setup.py
backend/requirements/: default.txt  dev.txt  ee.txt  model_server.txt
backend/scripts/: add_connector_creation_script.py  build_docx_preview.py  coding_agent_test.py  cv_extract_and_ingest.py  cv_extraction_prototype_final.py  cv_extraction_prototype_v3.py  cv_extraction_prototype_v4.py  cv_extraction_prototype_v5.py  dev_celery_reload.py  dev_run_background_jobs.py  env_inventory.py  env_inventory_baseline.txt  force_delete_connector_by_id.py  hard_delete_chats.py  inspect_kg_classification.py  kg_dump_person.py  orphan_doc_cleanup_script.py  probe_vespa_chunks.py  reencrypt_secrets.py  reset_indexes.py  reset_postgres.py  restart_containers.sh  rotate_llm_provider_keys.py  run_enterpriserag_bench_questions.py  run_industryrag_bench_questions.py  run_kg_pipeline.py  save_load_state.py  seed_dev_license.py  setup_craft_templates.sh  sources_selection_analysis.py  update_connector_prune_freq.py  update_recommended_models.py  update_recommended_models_rules.json  upload_files_as_connectors.py
backend/shared_configs/: configs.py  contextvars.py  enums.py  model_server_models.py
backend/slackbot_images/: README.md
backend/tests/: README.md  conftest.py
cli/: Dockerfile  README.md  go.mod  go.sum  hatch_build.py  pyproject.toml
cli/cmd/: ask.go  chat.go  common.go  configure.go  image.go  image_test.go  root.go  search.go  search_test.go  serve.go  validate.go
contributing_guides/: best_practices.md
deployment/docker_compose/: .env.voeb.template  Dockerfile.voeb  docker-compose.craft.yml  docker-compose.dev.yml  docker-compose.mcp-oauth-test.yml  docker-compose.mcp-per-user-key-test.yml  docker-compose.multitenant-dev.yml  docker-compose.no-vectordb.yml  docker-compose.prod-cloud.yml  docker-compose.prod-no-letsencrypt.yml  docker-compose.prod.yml  docker-compose.resources.yml  docker-compose.search-testing.yml  docker-compose.voeb.yml  docker-compose.yml  env.prod.template  env.template  init-letsencrypt.sh  install.ps1  install.sh
deployment/helm/: README.md
deployment/terraform/: .gitignore
desktop/: .gitignore  README.md  package.json
desktop/src/: index.html  titlebar.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
docs/: AUDIT_LOGGING.md  CHANGELOG.md  METRICS.md  README.md  arbeitspaket-change-management.md  betriebskonzept.md  entra-id-kundenfragen.md  sicherheitskonzept.md  testkonzept.md
docs/abnahme/: abnahmeprotokoll-m1.md  abnahmeprotokoll-template.md  meilensteinplan.md
docs/adr/: adr-001-onyx-foss-als-basis.md  adr-002-extension-architektur.md  adr-005-node-upgrade-g1a8d.md  (+2 more)
loadtest/: Dockerfile  README.md  locustfile.py  prometheus_collector.py  prometheus_exporter.py  pyproject.toml  shapes.py
loadtest/dashboards/: chat-loadtest-correlation.json
loadtest/k8s/: locust.yaml  mock-llm.yaml
loadtest/mock_llm/: Dockerfile  app.py  models.py
loadtest/onyx_client/: chat_user.py  env.py  stream_parser.py
loadtest/scenarios/: __init__.py  chat_with_search.py  compression.py  deep_research.py  disconnect.py  file_attachment.py  health_probe.py  long_conversation.py  multi_tool.py  thread_hog.py
loadtest/tests/: test_exporter.py  test_mock_llm.py  test_stream_parser.py
mobile/: .env.example  AGENTS.md  GETTING_STARTED.md  README.md  app.json  babel.config.js  components.json  eslint.config.js  jest.config.js  jest.setup.ts  metro.config.js  package.json  tailwind.config.js
web/: .dockerignore  AGENTS.md  Dockerfile  README.md  jest.config.js  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  sentry.server.config.ts  tailwind.config.js  tsconfig.json  tsconfig.types.json
widget/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+4346 files in other folders)
