[project]
name = "onyx-loadtest"
version = "0.1.0"
description = "Locust load tests for the Onyx chat path"
requires-python = ">=3.11"
dependencies = [
    "locust>=2.32",
    # mock_llm server (also deployed standalone in later phases)
    "fastapi>=0.115",
    "uvicorn>=0.30",
    # Prometheus exporter for Locust milestone metrics (Phase 4 correlation)
    "prometheus-client>=0.21",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",  # starlette TestClient transport for mock_llm tests
]

# Intentionally NOT a member of the root uv workspace: locust pins
# gevent/geventhttpclient/flask, which must not constrain the backend's
# shared lockfile. Run `uv sync` from inside this directory.
#
# No [tool.ruff] section on purpose: ruff then falls back to the root
# pyproject, keeping this project under the repo-wide lint rules.
